<resources>
    <string name="app_name">AndroidLibraryArchitectureDemo</string>
    <string name="DataBindingDemo">DataBinding初探</string>
    <string name="DataBindingRecyclerViewDemo">DataBindingRecyclerViewDemo</string>
    <string name="GlideDemo">GlideDemo</string>
    <string name="VolleyDemo">VolleyDemo</string>
    <string name="OkHttpDemo">OkHttpDemo</string>
    <string name="MALE">MALE</string>
    <string name="FEMALE">FEMALE</string>
    <string name="RetrofitDemo">RetrofitDemo</string>
    <string name="RxJavaDemo">RxJavaDemo</string>
    <string name="RxRetrofitDemo">RxRetrofitDemo</string>
    <string name="Dagger2Demo">Dagger2Demo</string>
    <string name="LeakCanary">LeakCanary</string>
</resources>
