<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tellh.androidlibraryarchitecturedemo.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:onClick="onClickDataBindingPrimaryPractice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/DataBindingDemo"
                android:gravity="center"
                android:textSize="20sp"/>
            <Button
                android:layout_marginTop="10dp"
                android:onClick="onClickDataBindingRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/DataBindingRecyclerViewDemo"
                android:gravity="center"
                android:textSize="20sp"/>
            <Button
                android:layout_marginTop="10dp"
                android:textSize="20dp"
                android:gravity="center"
                android:onClick="onClickGlideDemo"
                android:text="@string/GlideDemo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:onClick="onClickVolleyDemo"
                android:text="@string/VolleyDemo"
                android:textSize="20dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:onClick="onClickOkHttpDemo"
                android:text="@string/OkHttpDemo"
                android:textSize="20dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:onClick="onClickRetrofitDemo"
                android:text="@string/RetrofitDemo"
                android:textSize="20dp" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
